# ros2-apriltag-docking-demo

./: .gitignore  README.md
.github/workflows/: ros2-ci.yml
docs/history/: 001-apriltag-docking.md  002-docking-review-fixes.md  003-docking-ci.md
docs/superpowers/plans/: 2026-07-17-apriltag-docking-demo.md  2026-07-18-docking-reliability.md  2026-07-18-readme-demo-video.md
docs/superpowers/specs/: 2026-07-17-apriltag-docking-demo-design.md  2026-07-18-docking-reliability-design.md  2026-07-18-readme-demo-video-design.md
src/demo2_apriltag_docking/: .flake8  package.xml  setup.cfg  setup.py
src/demo2_apriltag_docking/config/: apriltag.yaml  dock_database.yaml  docks.yaml  nav2_docking.yaml  turtlebot3_waffle_pi_nav2.yaml
src/demo2_apriltag_docking/demo2_apriltag_docking/: docking_task_bridge.py  monitor.py  tag_policy.py  tag_pose_bridge.py
src/demo2_apriltag_docking/launch/: demo.launch.py
src/demo2_apriltag_docking/maps/: demo_map.pgm  demo_map.yaml
src/demo2_apriltag_docking/models/apriltag_dock/: model.config  model.sdf
src/demo2_apriltag_docking/test/: test_bridge_helpers.py  test_config.py  test_flake8.py  test_simulation_assets.py  test_tag_policy.py  test_task_policy.py
src/demo2_apriltag_docking/worlds/: docking_demo.sdf
